--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-*****Bugfix_1.4*****
+*****Bugfix_1.5*****
 Python-Based Sobel Edge Detection
 
 Contributors:
@@ -13,6 +13,13 @@ Enter a filename of a colored .png image
 Enter a value for the variance and dimensions for a Gaussian distribution kernel
 
 Included in newest version:
+1.5
+-Gaussian Blur function optimized
+-extraneous print statement eliminated 
+KNOWN ISSUES:
+-time elapsed in thresholding does not reflect processing time
+
+Previous Versions
 1.4
 -threshold value is now dinamically calculated
 -user has the option to enter a new threshold value manually if not satisfied
@@ -21,7 +28,6 @@ KNOWN ISSUES:
 -program is very slow in general
 -time elapsed in thresholding does not reflect processing time
 
-Previous Versions
 1.3
 -removed the sciPy library from third step
 -patched the communication discrepency between step 3 and 4
